force-app/main/default/objects/PurchasePlanSupplier__c/PurchasePlanSupplier__c.object-meta.xml
<CustomObject>
    <label>Purchase Plan Supplier</label>
    <pluralLabel>Purchase Plan Suppliers</pluralLabel>
    <nameField>
        <displayFormat>PS{YY}{MM}{DD}{0000}</displayFormat>
        <label>PP Supplier</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>