force-app/main/default/objects/PurchasePlanSupplier__c/fields/EvaluationScore__c.field-meta.xml
<CustomField>
    <fullName>EvaluationScore__c</fullName>
    <label>Evaluation Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>