force-app/main/default/objects/PurchasePlanSupplier__c/fields/JoinStatus__c.field-meta.xml
<CustomField>
    <fullName>JoinStatus__c</fullName>
    <label>Joined Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>NotAttended</fullName>
                <label>Not Attended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>