force-app/main/default/objects/PurchasePlanSupplier__c/fields/LatestRound__c.field-meta.xml
<CustomField>
    <fullName>LatestRound__c</fullName>
    <label>Latest Round</label>
    <summarizedField>PurchasePlanResult__c.Round__c</summarizedField>
    <summaryForeignKey>PurchasePlanResult__c.PurchasePlanSupplierId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>