force-app/main/default/objects/PurchasePlanSupplier__c/fields/PurchasePlanId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanId__c</fullName>
    <label>Purchase Plan</label>
    <referenceTo>PurchasePlan__c</referenceTo>
    <relationshipName>RFX</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>