force-app/main/default/objects/PurchasePlanSupplier__c/fields/QuotationDate__c.field-meta.xml
<CustomField>
    <fullName>QuotationDate__c</fullName>
    <label>Quotation Date</label>
    <summarizedField>PurchasePlanResult__c.CreatedDate</summarizedField>
    <summaryFilterItems>
        <field>PurchasePlanResult__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasePlanResult__c.PurchasePlanSupplierId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>