force-app/main/default/objects/PurchasePlanSupplier__c/fields/QuotationStatus__c.field-meta.xml
<CustomField>
    <fullName>QuotationStatus__c</fullName>
    <label>Quotation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>