force-app/main/default/objects/PurchasePlanSupplier__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <formula>SupplierId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>