force-app/main/default/objects/PurchasePlanSupplier__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>PurchasePlanResult__c.QuotationAmount__c</summarizedField>
    <summaryFilterItems>
        <field>PurchasePlanResult__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasePlanResult__c.PurchasePlanSupplierId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>