force-app/main/default/objects/PurchasePlanSupplier__c/fields/ViewFlag__c.field-meta.xml
<CustomField>
    <fullName>ViewFlag__c</fullName>
    <label>Viewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>NotViewd</fullName>
                <label>Not Viewd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>